--- a/hello.conf
+++ b/hello.conf
@@ -9,5 +9,5 @@ server {
 
     sub_filter_once off;
     sub_filter 'server_address' '${private_ip}';
-    sub_filter 'request_id' '$request_id';
+    sub_filter 'request_id' '${request_id}';
 }
